--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="primary_color">#388E3C</color>
+    <color name="primary_dark_color">#00600F</color>
+    <color name="primary_light_color">#6ABF69</color>
+
+    <color name="secondary_color">#81C784</color>
+    <color name="secondary_dark_color">#519657</color>
+    <color name="secondary_light_color">#B2FAB4</color>
+
+    <color name="primaryColor">#00acc1</color>
+    <color name="primaryLightColor">#5ddef4</color>
+    <color name="primaryDarkColor">#007c91</color>
+    <color name="primaryTextColor">#000000</color>
 </resources>
