--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="primary_dark_color">#00600F</color>
     <color name="primary_light_color">#6ABF69</color>
 
+    <color name="dark_green_200">#1e6f5c</color>
+
     <color name="secondary_color">#81C784</color>
     <color name="secondary_dark_color">#519657</color>
     <color name="secondary_light_color">#B2FAB4</color>
