--- a/app/src/main/res/layout/item_dish_layout.xml
+++ b/app/src/main/res/layout/item_dish_layout.xml
@@ -14,7 +14,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/iv_dish_image"
@@ -24,6 +26,20 @@
             android:contentDescription="@string/image_contentDescription"
             android:scaleType="fitXY"
             tools:src="@mipmap/ic_launcher" />
+
+        <ImageButton
+            android:id="@+id/ib_more"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|end"
+            android:layout_margin="@dimen/_5sdp"
+            android:background="@android:color/transparent"
+            android:contentDescription="@string/image_description"
+            android:foreground="?attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_more"/>
+
+    </FrameLayout>
+
 
         <TextView
             android:id="@+id/tv_dish_title"
