--- a/app/src/main/res/menu/menu_all_dishes.xml
+++ b/app/src/main/res/menu/menu_all_dishes.xml
@@ -12,5 +12,6 @@
     android:id="@+id/action_add_dish"
     android:icon="@drawable/ic_add"
     android:title="@string/add_dish"
+    android:orderInCategory="101"
     app:showAsAction="always"/>
 </menu>
